--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
 
         <activity android:name=".GameActivity" />
         <activity android:name=".AboutActivity" />
+        <activity android:name=".UserProfileActivity" />
 
     </application>
 
